--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
+alabaster==0.7.9
+Babel==2.3.4
 click==6.2
+codecov==2.0.5
+coverage==4.2
+cycler==0.10.0
 Cython==0.23.4
+docutils==0.12
 flake8==2.5.4
+Jinja2==2.8
+MarkupSafe==0.23
+matplotlib==1.5.3
+mccabe==0.4.0
+numpy==1.11.2
+pep8==1.7.0
+pluggy==0.3.1
+py==1.4.31
+pyflakes==1.0.0
+Pygments==2.1.3
+pyparsing==2.1.10
 pytest==2.8.5
 pytest-cov==2.2.1
+python-dateutil==2.6.0
+pytz==2016.7
+requests==2.12.3
 setuptools-cython==0.2.1
+six==1.10.0
+snowballstemmer==1.2.1
 Sphinx==1.3.5
+sphinx-rtd-theme==0.1.9
 tox==2.3.1
+virtualenv==15.1.0
