--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,9 @@ script:
   - pip install -e .
   - heat -v
   - py.test --cov=heat tests/
-  - tox
   - python setup.py test
 after_success:
   - pip install ghp-import
   - make doc
   - ghp-import -n -p -m "Update gh-pages." doc/_build/
+  - bash <(curl -s https://codecov.io/bash)
