--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ setenv =
 # install pytest in the venvs
 deps=pytest       
      cython
-commands=py.test tests # or 'nosetests' or ...
+commands=py.test tests
