--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - mkdir -p build && cd build
   - cmake ..
   - make
-  - ctest
+  - ctest --verbose
   - pip install -e .
   - heat -v
   - py.test --cov=heat tests/
