--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ install:
   # command to install dependencies
   - pip install --upgrade wheel setuptools pip
   - pip install -r requirements/development.txt
+  - sudo apt-get install -y gdb  # install gdb
+before_script:
+  - ulimit -c unlimited -S       # enable core dumps
 script:
   - mkdir -p build && cd build
   - cmake ..
@@ -23,10 +26,13 @@ script:
   #- ctest --verbose
   - pip install -e .
   - heat -v
-  #- py.test --cov=heat tests/
+  - py.test --cov=heat tests/
   #- python setup.py test
 after_success:
   - pip install ghp-import
   - make doc
   - ghp-import -n -p -m "Update gh-pages." doc/_build/
   - bash <(curl -s https://codecov.io/bash)
+after_failure:
+  - COREFILE=$(find . -maxdepth 1 -name "core*" | head -n 1) # find core file
+  - if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" example -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
