--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   #- ctest --verbose
   - pip install -e .
   - heat -v
-  - py.test --cov=heat tests/
+  #- py.test --cov=heat tests/
   #- python setup.py test
 after_success:
   - pip install ghp-import
@@ -35,5 +35,4 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 after_failure:
   - COREFILE=$(find . -maxdepth 1 -name "core*" | head -n 1) # find core file
-  - sudo $(find ./ -maxdepth 1 -name 'core*' -print)
-  - if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" $(pwd)/tests/test_Uniform -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
+  #- if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" $(pwd)/tests/test_Uniform.py -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
