--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 after_failure:
   - COREFILE=$(find . -maxdepth 1 -name "core*" | head -n 1) # find core file
-  #- if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" $(pwd)/tests/test_Uniform.py -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
+  #- if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" $(pwd)/path-to-binary -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
